# awsim-autonoma-manual

./: .envrc  .gitmodules  Taskfile.yml
src/awsim_autonoma_manual/: package.xml  setup.cfg  setup.py
src/awsim_autonoma_manual/awsim_autonoma_manual/: awsim_autonoma_manual.py
src/awsim_autonoma_manual/launch/: awsim_autonoma_manual.launch.py
